decouple fetchAndStore helpers for daily movies and search query movies